# dde-dock-custom

./: .gitignore  CHANGELOG.md  CMakeLists.txt
debian/: control
frame/: CMakeLists.txt  main.cpp
frame/controller/: dockitemmanager.cpp  dockitemmanager.h
frame/dbus/: com.deepin.dde.Dock.xml  dbusdockadaptors.cpp  dbusdockadaptors.h  dockdaemonadaptors.cpp  dockdaemonadaptors.h  me.imever.dde.toppanel.xml  me.imever.toppanel.xml  org.deepin.dde.Display1.xml  org.deepin.dde.Launcher1.xml  org.deepin.dde.daemon.Dock1.xml  org.freedesktop.FileManager1.xml
frame/interfaces/: constants.h
frame/item/: WindowItem.cpp  WindowItem.h  appitem.cpp  appitem.h  diritem.cpp  diritem.h  dockitem.cpp  dockitem.h  folderitem.cpp  folderitem.h  item.qrc  launcheritem.cpp  launcheritem.h  pluginitem.cpp  pluginitem.h  tipswidget.cpp  trashitem.cpp  trashitem.h
frame/item/components/: AppDirWidget.cpp  AppDirWidget.h  appdrag.cpp  appdragwidget.cpp  appdragwidget.h  appeffect.cpp  appeffect.h  appsnapshot.cpp  appsnapshot.h  appspreviewprovider.h  appswingeffectbuilder.h  floatingpreview.cpp  hoverhighlighteffect.cpp  hoverhighlighteffect.h  previewcontainer.cpp  previewcontainer.h
frame/panel/: mainpanelcontrol.cpp  mainpanelcontrol.h
frame/taskmanager/: appinfo.cpp  common.h  dbushandler.cpp  dbushandler.h  desktopinfo.cpp  desktopinfo.h  entries.cpp  entries.h  entry.cpp  entry.h  taskmanager.cpp  taskmanager.h  waylandmanager.cpp  waylandmanager.h  windowidentify.cpp  windowinfok.h  windowinfomap.cpp  windowinfomap.h  windowinfox.cpp  x11manager.cpp  x11manager.h
frame/util/: XUtils.cpp  XUtils.h  abstractpluginscontroller.cpp  abstractpluginscontroller.h  displaymanager.cpp  displaymanager.h  dockpopupwindow.cpp  dockpopupwindow.h  docksettings.cpp  docksettings.h  flowlayout.cpp  flowlayout.h  imageutil.cpp  imageutil.h  menuworker.cpp  menuworker.h  monitor.cpp  multiscreenworker.cpp  multiscreenworker.h  utils.cpp  utils.h
frame/window/: accessible.h  dockitemmanager.cpp  dockitemmanager.h  mainpanelcontrol.cpp  mainpanelcontrol.h  mainwindow.cpp  mainwindow.h
interfaces/: pluginproxyinterface.h
plugins/: CMakeLists.txt
plugins/datetime/: datetimeplugin.cpp  datetimeplugin.h  datetimewidget.cpp  datetimewidget.h
plugins/multitasking/: multitaskingwidget.cpp  multitaskingwidget.h
plugins/show-desktop/: showdesktopwidget.cpp  showdesktopwidget.h
widgets/: tipswidget.cpp
